# open-meteo-mcp

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  cloudbuild.yaml  deploy.ps1  deploy.sh  main.py  pom.xml  pyproject.toml  run-mcp-inspector.sh  server.py  standalone_tests.py  test-mcp.ps1  test_alerts.py  test_improvements.py
.claude/: settings.local.json
.fastmcp/: config.yaml
.github/workflows/: deploy.yml
docs/: PROMPTS.md  RESOURCES.md  WEATHER_CODES.md
docs/tools/: GET_SNOW_CONDITIONS_SPEC.md  GET_WEATHER_SPEC.md
src/main/java/ch/sbb/ki/openmeteomcp/api/openmeteo/: OpenMeteoClient.java
src/main/java/ch/sbb/ki/openmeteomcp/api/openmeteo/models/: CurrentWeather.java  DailySnow.java  DailyWeather.java  HourlySnow.java  HourlyWeather.java  SnowConditions.java  WeatherForecast.java
src/main/java/com/openmeteo/: OpenMeteoMcpApplication.java
src/main/java/com/openmeteo/api/client/: OpenMeteoClient.java
src/main/java/com/openmeteo/api/client/models/: CurrentWeather.java  DailySnow.java  DailyWeather.java  HourlySnow.java  HourlyWeather.java  SnowConditions.java  WeatherForecast.java
src/main/java/com/openmeteo/config/: McpConfig.java  WebClientConfig.java
src/main/java/com/openmeteo/controller/: McpController.java
src/main/java/com/openmeteo/controllers/: RootMcpController.java
src/main/java/com/openmeteo/prompts/: OutdoorActivityPrompt.java  SkiTripWeatherPrompt.java  WeatherAwareTravelPrompt.java
src/main/java/com/openmeteo/resources/: SwissSkiResortsResource.java  WeatherCodesResource.java  WeatherParametersResource.java
src/main/java/com/openmeteo/session/: SseSessionManager.java
src/main/java/com/openmeteo/tools/: GetSnowConditionsTool.java  GetWeatherTool.java
src/main/java/com/openmeteo/tools/models/: SnowInput.java  WeatherInput.java
src/main/resources/: application.yaml
src/open_meteo_mcp/: __init__.py  client.py  helpers.py  models.py  server.py
src/open_meteo_mcp/data/: swiss-ski-resorts.json
src/test/java/com/openmeteo/tools/: GetSnowConditionsToolTest.java  GetWeatherToolTest.java
tests/: __init__.py  test_air_quality.py  test_client.py  test_geocoding.py  test_helpers.py  test_meteo_improvements.py  test_models.py  test_server.py
